welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value a
	if (vacation==false&&(day>=1 && a<=5)) {
                                        ^