welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (vacation==false&&(day>=1 && a<=5)) {
		return "7:00"
	}
	else if (vacation==false&&(day==6 || day==0)) {
		return "7:00"
	}
	else return "10:00"
}
